--- a/Felix_Lu_Digital_Outcome-2.8_V3/Felix_Lu_Digital_Outcome-2.8/Felix_Lu_Digital_Outcome-2.8.csproj
+++ b/Felix_Lu_Digital_Outcome-2.8_V3/Felix_Lu_Digital_Outcome-2.8/Felix_Lu_Digital_Outcome-2.8.csproj
@@ -53,6 +53,12 @@
     <Compile Include="Game.Designer.cs">
       <DependentUpon>Game.cs</DependentUpon>
     </Compile>
+    <Compile Include="Hint.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Hint.Designer.cs">
+      <DependentUpon>Hint.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
     </Compile>
